# birdie-ai

./: .env.example  .env.test  .gitignore  AGENTS.md  Makefile  QUICKSTART.md  README.md  docker-compose.cvm.yml  docker-compose.test.yml  docker-compose.wechat-pay-key.example.yml  docker-compose.yml  project.config.json  小鸟AI高尔夫-产品设计白皮书.md  灵鸟golf-产品设计白皮书.md
ai_engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai_engine/app/: config.py  errors.py  main.py  metrics.py  mock_pipeline.py  sample_fixture.py  schemas.py  storage.py  version_router.py
ai_engine/app/ecs/: calibration.py  gates.py  regression.py
ai_engine/app/integrations/: __init__.py  probe.py
ai_engine/app/pipeline/: __init__.py  angle_profiles.py  camera_angle.py  club_profiles.py  confidence.py  constants.py  derive_skeleton.py  detect_swings.py  diagnose.py  engine_warnings.py  feature_confidence_map.py  feature_measurability.py  features.py  multi_swing.py  phases.py  phases_v2.py  pose.py  pose_denoise.py  pose_refine.py  precheck.py  precheck_eval.py  preprocess.py  preprocess_router.py  preprocess_v2.py  real_pipeline.py  real_pipeline_v2.py  recommend.py  rotation_issue_copy.py  rotation_track.py  rule_engine.py  score_profiles.py  score_trust.py  scoring.py  scoring_narrative.py  swing_candidate_previews.py  visualize.py
ai_engine/scripts/: calibration_regression.py  cos_switch_selfcheck.py  debug_backswing_score.py  generate_ecs_baseline.py  precheck_threshold_eval.py  pro_clip_score_rank.py  tune_pose_calibration.py  v1_v2_diff.py  w9_smoke.py
ai_engine/scripts/data/: README-pro-clip-candidates.md  pro_clip_candidates.csv
ai_engine/tests/: __init__.py  conftest.py  rotation_regression_helpers.py  test_admin_endpoints.py  test_calibration.py  test_camera_angle.py  test_camera_angle_upload.py  test_chipping_diagnose.py  test_chipping_mode_routing.py  test_chipping_pipeline.py  test_club_profiles.py  test_confidence.py  test_cos_switch_selfcheck.py  test_derive_skeleton.py  test_detect_swings_route.py  test_diagnose.py  test_diagnose_v2_measurability.py  test_early_quality_skip_stability.py  test_ecs_regression.py  test_error_registry.py  test_errors.py  test_feature_confidence_scoring.py  test_feature_measurability_scoring.py  test_features.py  test_metrics.py  test_multi_swing.py  test_nelly_dtl_scoring.py  test_phases.py  test_phases_v2.py  test_pose.py  test_pose_denoise.py  test_pose_parquet_roundtrip.py  test_pose_refine.py  test_precheck.py  test_precheck_eval.py  test_preprocess.py  test_preprocess_router.py  test_preprocess_v2.py  test_preprocess_v2_timing_regression.py  test_putting_diagnose.py  (+31 more)
ai_engine/tests/ecs/: pose_profiles.py
ai_engine/tests/fixtures/: .gitkeep  README.md  download_samples.sh  generate_synthetic.sh  rotation_regression_manifest.json
app/: .gitignore  (+2 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_chat_system_prompt_version.py  0003_orders_and_payments.py  0004_training_system.py  0005_invitations.py  0006_share_actions.py  0007_events.py  0008_account_deletion.py  0009_wechat_app_openid.py  0010_swing_analysis_deleted_at.py  0011_swing_analyses_list_alive_index.py  0012_alembic_version_wide.py  0013_user_has_completed_real_analysis.py  0014_user_papay_contract_id.py  0015_swing_analysis_quality_warnings.py  0016_feedback.py  0017_m9_user_profiles_v2.py  0018_m11_courses_schema.py  0019_m12_pro_library_schema.py  0020_m13_meetup_schema.py  0021_m9_04_training_preference_meta.py  0021_swing_analyses_engine_version.py  0022_m7_06_analysis_confidence.py  0023_m9_04_training_preference_meta.py  0024_m13_02_venues_geo.py  0025_swing_analyses_engine_warnings.py  0026_m8_analysis_annotations.py  0027_m12_10_pro_favorites_try_it.py  0028_m13_06_meetup_credit_score.py  0029_m13_07_meetup_feedback_unique.py  0030_m13_08_event_participation_score.py  0031_m13_09_meetup_identity.py  0032_m13_10_coach_student_relations.py  0033_m8_01_coach_profiles.py  0034_m8_03_coach_student_binding.py  0035_m8_05_coach_assigned_tasks.py  0036_m8_07_course_session_recaps.py  0037_m8_08_moderation_queue.py  0038_m8_10_coach_seed_level.py  0039_m10_01_analysis_mode.py  (+6 more)
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/api/: deps.py
backend/app/constants/: __init__.py  chat_quick_questions.py  chipping.py  putting.py
backend/app/core/: database.py  exceptions.py  logging.py  middleware.py  production_guard.py  rate_limit.py  redis.py  security.py  sentry.py  wechat_deploy_hints.py
backend/app/integrations/: ai_engine.py  apple_auth.py  llm.py  minio.py  wechat.py  wechat_access_token.py  wechat_pay_v3.py  wechat_phone.py  wechat_security.py  wechat_subscribe_message.py  wechat_wxacode.py  wechat_xpay.py
backend/app/models/: __init__.py  analysis.py  base.py  chat.py  coach.py  course.py  event.py  feedback.py  invitation.py  meetup.py  moderation.py  payment.py  pro_library.py  share.py  training.py  user.py  user_profile_v2.py
backend/tests/: conftest.py  fakes.py  meetup_test_helpers.py  test_account_deletion.py  test_analyses_e2e.py  test_analyses_lifecycle.py  test_analyses_sample.py  test_analysis_pro_matches_api.py  test_analysis_progress.py  test_analysis_soft_delete.py  test_analysis_stage_and_errors.py  test_assets_proxy_prefixes.py  test_auth.py  test_chat_content_security.py  test_chat_lifecycle.py  test_chat_reply_attachments.py  test_chat_streaming.py  test_chat_topic_boundary_runtime.py  test_chipping_mode_api.py  test_coach_annotations.py  test_coach_courses.py  test_coach_dashboard_api.py  test_coach_profile_api.py  test_coach_prompt_boundary.py  test_coach_quota_bypass.py  test_coach_recap_api.py  test_coach_seed_bd.py  test_coach_spectator_api.py  test_coach_student_api.py  test_coach_tasks.py  test_content_moderation.py  test_course_assessment_service.py  test_course_certificates.py  test_course_service.py  test_courses_api.py  test_detect_swings_api.py  test_events.py  test_feedback.py  test_health.py  test_invitations.py  (+52 more)
(+939 files in other folders)
