[project]
name = "xiaoniao-ai-engine"
version = "0.1.0"
description = "小鸟 AI - 视觉分析引擎（独立服务）"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    # 真实 AI 模型在 W6 才装：mediapipe, opencv-python, torch
]

[project.optional-dependencies]
ai = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.9.0",
    "torch>=2.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"
