[project]
name = "xiaoniao-ai-engine"
version = "0.1.1"
description = "小鸟 AI - 视觉分析引擎（独立服务）"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    # W6-T1：真实姿态估计管线依赖
    # - mediapipe **pin 0.10.14**（重要）：
    #   Solutions API (`mediapipe.solutions.pose`) 在 0.10.20+ 开始被移除，
    #   0.10.33 完全下线；必须 ≤0.10.14 才能用 `mp.solutions.pose.Pose`。
    #   如果未来要升级，需要迁移到 Tasks API (`mediapipe.tasks.vision.PoseLandmarker`)，
    #   那会引入手动下载 .task 模型文件的复杂度（见 pose.py 模块顶部 docstring）。
    # - opencv-python-headless 做视频帧读取 / 质量指标 / 骨骼叠加绘制；必须 headless，
    #   否则依赖 GTK 导致 Docker slim 容器启动失败
    # - mediapipe 运行时隐式依赖 protobuf / absl-py / attrs，由 pip 自动拉
    # 注意：mock 模式也能导入这两个包而不用（import 失败时 mock_pipeline 不受影响）
    "mediapipe==0.10.14",
    "opencv-python-headless>=4.9.0,<5",
    # W6-T3：可视化产物落 MinIO
    # - minio：跟 backend 用同一个 SDK（minio-py），轻量、无 boto3/botocore 依赖体积
    # - pyarrow：把 (F, 33, 3) + visibility 写成 parquet（比 JSON 省 3-5x，前端 mini-cdn 可读）
    "minio>=7.2.0",
    "pyarrow>=16.0.0,<19",
    # P2-M7-10：规则 V2 走 YAML 配置；运维与教研可在不改代码的情况下灰度新规则
    "pyyaml>=6.0.0,<7",
    # P2-W6 ENG-A2：让 version_router.set_rollout_pct() 真的能写进 Redis，
    # 不再 ModuleNotFoundError → 灰度 pct 可热改不重启 ai_engine 容器。
    # ＞=5,<6：与 backend 用的 redis-py 主版本对齐，避免分歧。
    "redis>=5,<6",
]

[project.optional-dependencies]
# 后续如果要上 torch 模型（比如自训练的 swing 分类器），走 optional 依赖，
# 避免让 mediapipe-only 的部署也强制安装 torch 大包
ai-torch = [
    "torch>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"
