[project]
name = "xiaoniao-backend"
version = "0.1.1"
description = "领翼golf 高尔夫智能教练 - 后端服务"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # 数据校验与配置
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",               # 运行时：FastAPI 异步连接
    "psycopg2-binary>=2.9.9",        # Alembic 迁移：env.py 使用同步驱动
    "alembic>=1.13.0",
    # 缓存与队列
    "redis[hiredis]>=5.0.0",
    "celery>=5.4.0",
    # 安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 工具
    "httpx>=0.27.0",
    "nanoid>=2.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    # 第三方集成
    "cos-python-sdk-v5>=1.9.30",  # 腾讯云 COS
    "minio>=7.2.0",                # 本地 MinIO
    # 微信 SDK：暂不引入。wechatpy 2.x 仅有 pre-release（2.0.0a26），1.x 系列已不再维护。
    # MVP 阶段直接用 httpx 调 code2session HTTP 接口即可；接真微信前再决定 SDK/自实现方案。
    # 监控告警：DSN 为空时 ``app/core/sentry.py::setup_sentry`` 直接 no-op，本地/CI 无副作用
    "sentry-sdk[fastapi,celery]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "faker>=25.0.0",
]

# uv 同步/锁文件用（替代已弃用的 [tool.uv].dev-dependencies）
[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ==================== Ruff ====================
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",  # 行长（按项目约定 120，靠编辑器提醒即可，不强制）
    "B008",  # FastAPI 的 Depends/Header 作为默认参数是惯例
    "B904",  # 异常链由 AppException 自行管控
    # 中文项目：全角标点（，。：；"'）在 docstring/comment/字符串字面量中是正常用法，
    # 不视为"歧义 unicode"。
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ==================== Pytest ====================
[tool.pytest.ini_options]
asyncio_mode = "auto"
# 让所有异步测试/夹具共享同一个 event loop，否则跨测试使用全局
# SQLAlchemy/asyncpg 连接池时会抛 "attached to a different loop"。
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

# ==================== Mypy ====================
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
